force-app/main/default/objects/SalesforceCustomer__x/SalesforceCustomer__x.object-meta.xml
<CustomObject>
    <externalDataSource>Hera_Archive</externalDataSource>
    <externalName>SalesforceCustomer</externalName>
    <label>Cliente Salesforce</label>
    <pluralLabel>Clienti Salesforce</pluralLabel>
</CustomObject>