force-app/main/default/objects/SalesforceCustomer__x/fields/BillingIsAddressVerifiedC__c.field-meta.xml
<CustomField>
    <fullName>BillingIsAddressVerifiedC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BillingIsAddressVerifiedC</description>
    <externalDeveloperName>BillingIsAddressVerifiedC</externalDeveloperName>
    <label>BillingIsAddressVerifiedC</label>
    <type>Checkbox</type>
</CustomField>