force-app/main/default/objects/SalesforceCustomer__x/fields/BillingStreetCodeC__c.field-meta.xml
<CustomField>
    <fullName>BillingStreetCodeC__c</fullName>
    <description>BillingStreetCodeC</description>
    <externalDeveloperName>BillingStreetCodeC</externalDeveloperName>
    <label>Codice Via Strad. SAP [Res./Sede Legale]</label>
    <length>30</length>
    <type>Text</type>
</CustomField>