force-app/main/default/objects/SalesforceCustomer__x/fields/BPSAPModelC__c.field-meta.xml
<CustomField>
    <fullName>BPSAPModelC__c</fullName>
    <description>BPSAPModelC</description>
    <externalDeveloperName>BPSAPModelC</externalDeveloperName>
    <label>BPSAPModelC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>