force-app/main/default/objects/SalesforceCustomer__x/fields/CategoryCodeC__c.field-meta.xml
<CustomField>
    <fullName>CategoryCodeC__c</fullName>
    <description>CategoryCodeC</description>
    <externalDeveloperName>CategoryCodeC</externalDeveloperName>
    <label>Codice Categoria Cliente</label>
    <length>4</length>
    <type>Text</type>
</CustomField>