force-app/main/default/objects/SalesforceCustomer__x/fields/ConvertedDateC__c.field-meta.xml
<CustomField>
    <fullName>ConvertedDateC__c</fullName>
    <description>ConvertedDateC</description>
    <externalDeveloperName>ConvertedDateC</externalDeveloperName>
    <label>Data Conversione</label>
    <type>DateTime</type>
</CustomField>