force-app/main/default/objects/SalesforceCustomer__x/fields/CustomerCodeC__c.field-meta.xml
<CustomField>
    <fullName>CustomerCodeC__c</fullName>
    <description>CustomerCodeC</description>
    <externalDeveloperName>CustomerCodeC</externalDeveloperName>
    <label>CustomerCodeC</label>
    <length>30</length>
    <type>Text</type>
</CustomField>