force-app/main/default/objects/SalesforceCustomer__x/fields/DataLimitationC__c.field-meta.xml
<CustomField>
    <fullName>DataLimitationC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DataLimitationC</description>
    <externalDeveloperName>DataLimitationC</externalDeveloperName>
    <label>DataLimitationC</label>
    <type>Checkbox</type>
</CustomField>