force-app/main/default/objects/SalesforceCustomer__x/fields/FirstNameC__c.field-meta.xml
<CustomField>
    <fullName>FirstNameC__c</fullName>
    <description>FirstNameC</description>
    <externalDeveloperName>FirstNameC</externalDeveloperName>
    <label>Nome</label>
    <length>100</length>
    <type>Text</type>
</CustomField>