force-app/main/default/objects/SalesforceCustomer__x/fields/FiscalCodeC__c.field-meta.xml
<CustomField>
    <fullName>FiscalCodeC__c</fullName>
    <description>FiscalCodeC</description>
    <externalDeveloperName>FiscalCodeC</externalDeveloperName>
    <label>Codice Fiscale</label>
    <length>16</length>
    <type>Text</type>
</CustomField>