force-app/main/default/objects/SalesforceCustomer__x/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <description>Industry</description>
    <externalDeveloperName>Industry</externalDeveloperName>
    <label>Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>