force-app/main/default/objects/SalesforceCustomer__x/fields/InterestAreaC__c.field-meta.xml
<CustomField>
    <fullName>InterestAreaC__c</fullName>
    <description>InterestAreaC</description>
    <externalDeveloperName>InterestAreaC</externalDeveloperName>
    <label>InterestAreaC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>