force-app/main/default/objects/SalesforceCustomer__x/fields/IsSOLC__c.field-meta.xml
<CustomField>
    <fullName>IsSOLC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>IsSOLC</description>
    <externalDeveloperName>IsSOLC</externalDeveloperName>
    <label>SOL?</label>
    <type>Checkbox</type>
</CustomField>