force-app/main/default/objects/SalesforceCustomer__x/fields/LastNameC__c.field-meta.xml
<CustomField>
    <fullName>LastNameC__c</fullName>
    <description>LastNameC</description>
    <externalDeveloperName>LastNameC</externalDeveloperName>
    <label>Cognome/Ragione sociale</label>
    <length>100</length>
    <type>Text</type>
</CustomField>