force-app/main/default/objects/SalesforceCustomer__x/fields/LastUsedPostelEmailC__c.field-meta.xml
<CustomField>
    <fullName>LastUsedPostelEmailC__c</fullName>
    <description>LastUsedPostelEmailC</description>
    <externalDeveloperName>LastUsedPostelEmailC</externalDeveloperName>
    <label>Email Destinataria Postel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>