force-app/main/default/objects/SalesforceCustomer__x/fields/LegalFormTypeC__c.field-meta.xml
<CustomField>
    <fullName>LegalFormTypeC__c</fullName>
    <description>LegalFormTypeC</description>
    <externalDeveloperName>LegalFormTypeC</externalDeveloperName>
    <label>LegalFormTypeC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>