force-app/main/default/objects/SalesforceCustomer__x/fields/MobilePhonePrefixC__c.field-meta.xml
<CustomField>
    <fullName>MobilePhonePrefixC__c</fullName>
    <description>MobilePhonePrefixC</description>
    <externalDeveloperName>MobilePhonePrefixC</externalDeveloperName>
    <label>MobilePhonePrefixC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>