force-app/main/default/objects/SalesforceCustomer__x/fields/OtherPhoneC__c.field-meta.xml
<CustomField>
    <fullName>OtherPhoneC__c</fullName>
    <description>OtherPhoneC</description>
    <externalDeveloperName>OtherPhoneC</externalDeveloperName>
    <label>Altro Telefono</label>
    <length>255</length>
    <type>Text</type>
</CustomField>