force-app/main/default/objects/SalesforceCustomer__x/fields/Parent_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Name__c</fullName>
    <description>Parent_Name</description>
    <externalDeveloperName>Parent_Name</externalDeveloperName>
    <label>Parent_Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>