force-app/main/default/objects/SalesforceCustomer__x/fields/PrimaryEmailC__c.field-meta.xml
<CustomField>
    <fullName>PrimaryEmailC__c</fullName>
    <description>PrimaryEmailC</description>
    <externalDeveloperName>PrimaryEmailC</externalDeveloperName>
    <label>Email primaria</label>
    <length>255</length>
    <type>Text</type>
</CustomField>