force-app/main/default/objects/SalesforceCustomer__x/fields/SAPIntegrationIDC__c.field-meta.xml
<CustomField>
    <fullName>SAPIntegrationIDC__c</fullName>
    <description>SAPIntegrationIDC</description>
    <externalDeveloperName>SAPIntegrationIDC</externalDeveloperName>
    <label>Identificativo Integrazione SAP</label>
    <length>30</length>
    <type>Text</type>
</CustomField>