force-app/main/default/objects/SalesforceCustomer__x/fields/SegmentC__c.field-meta.xml
<CustomField>
    <fullName>SegmentC__c</fullName>
    <description>SegmentC</description>
    <externalDeveloperName>SegmentC</externalDeveloperName>
    <label>SegmentC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>