force-app/main/default/objects/SalesforceCustomer__x/fields/SendModeC__c.field-meta.xml
<CustomField>
    <fullName>SendModeC__c</fullName>
    <description>SendModeC</description>
    <externalDeveloperName>SendModeC</externalDeveloperName>
    <label>Modalita Invio Doc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>