force-app/main/default/objects/SalesforceCustomer__x/fields/VATGroupEndDateC__c.field-meta.xml
<CustomField>
    <fullName>VATGroupEndDateC__c</fullName>
    <description>VATGroupEndDateC</description>
    <externalDeveloperName>VATGroupEndDateC</externalDeveloperName>
    <label>VATGroupEndDateC</label>
    <type>DateTime</type>
</CustomField>