force-app/main/default/objects/SalesforceCustomer__x/fields/VATGroupStartDateC__c.field-meta.xml
<CustomField>
    <fullName>VATGroupStartDateC__c</fullName>
    <description>VATGroupStartDateC</description>
    <externalDeveloperName>VATGroupStartDateC</externalDeveloperName>
    <label>VATGroupStartDateC</label>
    <type>DateTime</type>
</CustomField>