force-app/main/default/objects/SalesforceCustomer__x/fields/VATNumberC__c.field-meta.xml
<CustomField>
    <fullName>VATNumberC__c</fullName>
    <description>VATNumberC</description>
    <externalDeveloperName>VATNumberC</externalDeveloperName>
    <label>Partita Iva</label>
    <length>30</length>
    <type>Text</type>
</CustomField>