force-app/main/default/objects/SalesforceCustomer__x/fields/VirtualSAPIbanC__c.field-meta.xml
<CustomField>
    <fullName>VirtualSAPIbanC__c</fullName>
    <description>VirtualSAPIbanC</description>
    <externalDeveloperName>VirtualSAPIbanC</externalDeveloperName>
    <label>VirtualSAPIbanC</label>
    <length>50</length>
    <type>Text</type>
</CustomField>